# AetherLens

./: .editorconfig  .gitignore  ARCHITECTURE.md  AetherLens.sln  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  start_lab.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.vercel/: project.json
AetherLens.Tests/: AetherLens.Tests.csproj  MetricsTests.cs
api-server/: AetherLens.Api.csproj  Dockerfile  Program.cs  appsettings.json
api-server/Hubs/: Contracts.cs  NetworkMonitorHub.cs
api-server/Middleware/: RateLimitMiddleware.cs
api-server/Persistence/: AetherDb.cs  PacketConsumerService.cs  PacketPersistenceWorker.cs  SuspiciousConsumerService.cs
api-server/Services/: GrpcStreamService.cs  MetricsSnapshot.cs  SuspiciousGrpcStreamService.cs  SystemMonitorService.cs
core-engine/: Cargo.toml  Dockerfile  build.rs
core-engine/src/: main.rs
core-engine/src/engine/: processor.rs
core-engine/src/models/: common.rs
core-engine/src/network/: demo_stream.rs  mod.rs  process_map.rs  stream.rs
shared/proto/: aether.proto
web-dashboard/: Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo
web-dashboard/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
web-dashboard/src/components/: AnomalyFeed.tsx  LatencyMonitor.tsx  LiveConsole.tsx  NetworkTrafficChart.tsx  ProcessTracker.tsx  ProtocolPieChart.tsx  SystemHealth.tsx  UtcClock.tsx
web-dashboard/src/lib/: runtime-endpoints.ts  signalr.ts  utils.ts
(+2 files in other folders)
